[package]
name = "ncmprs"
version = "0.1.0"
description = "An example generated using the event-driven-async template"
authors = ["nicknase27 <80787938+nicknase27@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
rodio = "0.22.2"
walkdir = "2.5.0"
metaflac = "0.2.8"
audiotags = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
discord-rich-presence = "1.1.0"
config = "0.15.25"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
